--- a/Projeto Necromante/Index.html
+++ b/Projeto Necromante/Index.html
@@ -8,19 +8,25 @@
     <link rel="stylesheet" href="./css/inicial.css">
     <link rel="icon" href="/Projeto Necromante/imagens/caveira-icon.png" type="image/x-icon">
     <title>Necromante</title>
-
-    <style class="botoes-container">    
-    </style>
 </head>
 
 <body>
     <header>
-        <ul>
+        <ul class="botoes-superiores">
             <li>
-                <div class="botoes-container">
-                    <button class="noselect"></button>
-                    <a class="botãocreditos" href="#">Créditos</a>
-                </div>
+                <button class="botao-esquerda noselect">Deck</button>
+            </li>
+            <li>
+                <button class="botao-esquerda noselect">Loja</button>
+            </li>
+            <li>
+                <button class="botao-esquerda noselect">Jogar</button>
+            </li>
+            <li style="margin-left: auto;">
+                <a class="botãobaralho" href="#">Cadrastar</a>
+            </li>
+            <li>
+                <a class="botãocreditos" href="#">Entrar</a>
             </li>
         </ul>
     </header>
@@ -39,7 +45,6 @@
     </div>
 
     <footer>
-
     </footer>
 </body>
 
